--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,8 +20,17 @@ body{
     border-radius: 1rem !important;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
     padding: 2.2rem !important;
-    width: 400px;
+    width: 420px;
     margin-left: 50px;
+}
+
+.card-register{
+    border: 1px solid #e0e0e0;
+    border-radius: 1rem !important;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
+    padding: 2.2rem !important;
+    width: 500px;
+    margin-left: 100px;
 }
 
 h1.h1 {
@@ -37,6 +46,20 @@ a.link-primary {
     color: #f08006;
     text-decoration: none;
     background: transparent;
+}
+a.link-primary::after{
+    content: '';
+    display: block;
+    width: 0;
+    height: .25em;
+    border-radius: .5rem;
+    background: #f08006;
+    transition: width .3s;
+}
+
+a.link-primary:hover::after{
+    width: 90%;
+    transition: width .3s;
 }
 
 .btn-login{
@@ -58,6 +81,10 @@ a.link-primary {
         display: none;
     }
     .card-login{
+        width: auto;
+        margin-left: 0;
+    }
+    .card-register {
         width: auto;
         margin-left: 0;
     }
