--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,19 @@ body{
 }
 
 .space-container-login{
-    margin-top: 4rem;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+}
+
+.space-container-forgot{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
 }
 
 .bg-login{
@@ -13,6 +25,23 @@ body{
     margin-left: auto;
     margin-right: auto;
     width: 500px;
+    margin-left: -4rem;
+}
+
+.bg-register{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 500px;
+    margin-left: -2rem;
+}
+
+.bg-auth{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 350px;
+    margin-left: -4rem;
 }
 
 .card-login{
@@ -78,6 +107,12 @@ a.link-primary:hover::after{
 
 @media (max-width: 990px) {
     .bg-login {
+        display: none;
+    }
+    .bg-register {
+        display: none;
+    }
+    .bg-auth {
         display: none;
     }
     .card-login{
