--- a/assets/css/base/style.css
+++ b/assets/css/base/style.css
@@ -354,14 +354,19 @@ a.link-kateogri:hover {
   display: block;
   width: 1.875rem;
   height: 1.875rem;
-  line-height: 1.875rem;
   text-align: center;
-  color: #fff;
-  border: 1px solid #fff;
+  color: #dc3545;
+  border: 1px solid #dc3545;
+  border-radius: 50%;
 }
 
-.btn-like {
-  border-radius: 50%;
+.label-like {
+  cursor: pointer;
+  width: auto;
+  height: auto;
+  padding: 0.25rem;
+  font-size: 1rem;
+  white-space: nowrap;
 }
 
 .link-product:hover {
@@ -418,6 +423,96 @@ a.link-kateogri:hover {
   background-color: #f08006;
   color: #ffffff;
   transition: 0.5s ease;
+}
+
+.h2-border::after {
+  content: "";
+  display: block;
+  width: 20%;
+  margin-top: 5px;
+  padding-top: 5px;
+  border-bottom: 1px solid #f08006;
+}
+
+.btn-view {
+  font-size: 1.2rem;
+  font-weight: 700;
+  background-color: #f08006;
+  color: #ffffff !important;
+  padding: 0.3rem;
+  border-radius: 2rem;
+  width: 18rem;
+  transition: all 500ms ease 0s;
+}
+
+.btn-view:hover {
+  background-color: #f08006;
+  color: #ffffff !important;
+  border-radius: 2rem;
+  box-shadow: 0px 0px 7px 3px #f08006;
+  transition: all 500ms ease 0s;
+}
+
+.progress {
+  height: 0.3rem;
+  border-radius: 2rem;
+}
+
+.text-progress {
+  margin-top: 5px;
+  margin-bottom: -5px;
+  color: #858796;
+}
+
+h5.h5 {
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.footer-ul {
+  padding-inline-start: 0;
+}
+
+.footer-item {
+  list-style: none;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 2;
+}
+
+.footer-link {
+  color: #858796;
+  transition: all 500ms ease 0s;
+}
+
+.footer-link:hover {
+  text-decoration: none;
+  color: #f08006;
+  transition: all 500ms ease 0s;
+}
+
+.bg-footer {
+  width: 100%;
+  margin-top: -50px;
+}
+
+footer {
+  position: relative;
+  width: 100%;
+}
+
+p.copyright {
+  position: absolute;
+  width: 100%;
+  color: #858796;
+  line-height: 40px;
+  font-weight: 700;
+  text-align: center;
+  bottom: 0;
+}
+
+.space-hr {
+  margin-top: 5rem;
 }
 
 @media (max-width: 768px) {
