--- a/assets/css/base/style.css
+++ b/assets/css/base/style.css
@@ -732,6 +732,250 @@ p.text-rating {
   color: #f08006 !important;
 }
 
+.box-cart {
+  margin-top: 2rem;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 450px;
+  padding: 2.5rem;
+}
+
+.img-empty-cart {
+  width: 300px;
+  height: auto;
+}
+
+h3.text-heading {
+  line-height: 1.4;
+  font-weight: 700;
+  margin-bottom: 7px;
+  color: rgb(49, 53, 59);
+  font-size: 1.71429rem;
+  margin-top: 20px;
+}
+
+p.text-desc {
+  color: rgb(49, 53, 59);
+  line-height: 1.5;
+  font-size: 14px;
+}
+
+.btn-empty {
+  font-size: 1rem;
+  width: 10rem;
+  border-radius: 8px;
+  font-weight: 700;
+  padding: 6px;
+  background-color: #f08006;
+  color: #ffffff !important;
+}
+
+.cart-head {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  border-bottom: 6px solid rgb(243, 244, 245);
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.card-title-head {
+  font-size: 1rem;
+  color: #858796;
+}
+
+.card-button-head {
+  display: flex;
+  font-size: 1rem;
+  font-weight: 700;
+  cursor: pointer;
+  color: #f08006;
+}
+
+.cart-shop {
+  width: 100%;
+  border-bottom: 6px solid rgb(243, 244, 245);
+  padding-top: 15px;
+  padding-bottom: 10px;
+}
+
+.img-shop {
+  width: 75px;
+  height: 75px;
+  object-fit: cover;
+}
+
+.product-name {
+  position: relative;
+  display: inline-block;
+  padding-left: 15px;
+}
+
+a.title-shop {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #000;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.price-shop {
+  display: inline-flex;
+}
+
+.slash-price {
+  font-size: 1rem;
+  color: #858796;
+  text-decoration: line-through;
+  padding-right: 10px;
+}
+
+.final-price {
+  font-size: 1rem;
+  color: #f08006;
+  font-weight: 700;
+}
+
+.cart-other {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.note {
+  margin-top: 15px;
+  margin-bottom: 0;
+}
+
+.button-note {
+  font-size: 0.85rem;
+  font-weight: 700;
+  color: rgb(214, 0, 28);
+  cursor: pointer;
+}
+
+.cart-qty {
+  margin-top: 5px;
+}
+
+.number-cart {
+  display: inline-block;
+}
+
+.minus-cart,
+.plus-cart {
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+  background: #f08006;
+  color: #fff;
+  border-radius: 50%;
+  padding: 8px 5px 8px 5px;
+  padding-top: 0;
+  border: 1px solid #ddd;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+}
+input.input-jumlah {
+  height: 25px;
+  width: 70px;
+  text-align: center;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.button-delete {
+  cursor: pointer;
+  color: #ccc;
+  font-size: 20px;
+  display: inline-block;
+  padding-right: 10px;
+}
+
+.cart-detail {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.card-order {
+  width: 100%;
+  display: block;
+  position: relative;
+  margin: 0px;
+  padding: 0px;
+  border-radius: 8px;
+  box-shadow: rgb(202, 211, 225) 0px 1px 4px 0px;
+}
+
+.card-voucher {
+  border-bottom: 6px solid rgb(243, 244, 245);
+  padding: 16px;
+}
+
+.card-total-price {
+  padding: 16px;
+}
+
+.space-cart {
+  margin-top: 6rem !important;
+}
+
+.text-order {
+  font-size: 1rem;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.text-total {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.price-total {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #f08006;
+}
+
+.btn-order {
+  font-size: 1.1rem;
+  height: 48px;
+  line-height: 22px;
+  width: 100%;
+  border-radius: 8px;
+  font-weight: 700;
+  outline: none;
+  padding: 0px 16px;
+  background: #f08006;
+  color: #fff;
+  margin-top: 25px;
+}
+
+.form-note {
+  width: 155px !important;
+  height: 30px;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.75rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #fff;
+  border-bottom: 3px solid #ced4da;
+}
+
+input.form-note:focus {
+  border: 1px solid #fff !important;
+  border-bottom: 3px solid #ced4da !important;
+}
+
 @media (max-width: 768px) {
   .nav-space {
     display: none;
