cart and form order page

--- a/assets/css/base/style.css
+++ b/assets/css/base/style.css
@@ -976,6 +976,197 @@ input.form-note:focus {
   border-bottom: 3px solid #ced4da !important;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.container-fluid {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.card-form {
+  width: 100vw;
+  min-height: 100vh;
+  position: relative;
+}
+
+.card-form-order {
+  background: #fff;
+  width: 100%;
+  /* max-width: 500px; */
+  border-radius: 10px;
+  /* position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%); */
+  box-shadow: rgb(202, 202, 202) 0px 0px 5px 2px;
+  margin-bottom: 20px;
+}
+
+.card-form-head {
+  display: flex;
+  width: 100%;
+  padding: 20px;
+  justify-content: space-between;
+  border-bottom: 6px solid rgb(238, 238, 238);
+}
+
+.title-form {
+  font-size: 1.1rem;
+  color: #000;
+  font-weight: 700;
+  margin-bottom: 0;
+}
+
+.back-form {
+  font-size: 1rem !important;
+  color: #f08006 !important;
+  font-weight: 700;
+}
+
+.back-form:hover {
+  text-decoration: none;
+}
+
+.form-order {
+  padding: 20px;
+}
+
+.form-control {
+  height: auto;
+}
+
+.label-pay {
+  display: block;
+  width: 100%;
+}
+
+.label-pay > input {
+  visibility: hidden;
+  position: absolute;
+}
+.label-pay > input + .div-pay {
+  cursor: pointer;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 0.5rem;
+  margin-bottom: 20px;
+  border: 1px solid rgb(202, 202, 202);
+  transition: all 500ms ease 0s;
+}
+.label-pay > input:checked + .div-pay {
+  background-color: #ffd6bb;
+  border: 1px solid #ff6600;
+  box-shadow: #ffd6bb 0px 0px 10px 2px;
+  transition: all 500ms ease 0s;
+}
+
+.name-pay {
+  font-size: 1rem;
+  font-weight: 700;
+  margin-bottom: 0;
+}
+
+.img-pay {
+  width: 30px;
+}
+
+.card-list-order {
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+  width: 100%;
+  border-bottom: 3px solid rgb(238, 238, 238);
+}
+
+.img-list-order {
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+}
+
+.name-list-order {
+  display: inline-block;
+  font-size: 1rem;
+  font-weight: 700;
+  margin-left: 10px;
+}
+
+.list-order {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.note-list-order {
+  font-size: 0.8rem;
+  color: #858796;
+}
+
+.price-list-order {
+  font-size: 0.8rem;
+  color: #858796;
+  margin-bottom: 10px;
+  text-align: right;
+}
+
+.final-price-list-order {
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: #f08006;
+  margin-top: -5px;
+}
+
+.card-count-list-order {
+  width: 100%;
+  float: right;
+  margin-bottom: 10px;
+}
+
+.space-price {
+  margin-top: -30px;
+}
+
+.title-list {
+  font-size: 0.85rem;
+  color: #858796;
+}
+
+.price-list {
+  font-size: 0.85rem;
+  color: #f08006;
+  font-weight: 700;
+}
+
+.title-pay {
+  font-size: 0.85rem;
+  color: #858796;
+  font-weight: 700;
+  margin-top: 10px;
+}
+
+.space-order {
+  margin-top: 6rem;
+}
+.bg-white {
+  background-color: #fff !important;
+}
+
+.form-text {
+  padding-left: 10px;
+}
+
+.price-detail-order {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #f08006;
+}
+
 @media (max-width: 768px) {
   .nav-space {
     display: none;
@@ -992,5 +1183,12 @@ input.form-note:focus {
   .owl-theme {
     padding-right: 25px;
     padding-left: 25px;
+  }
+}
+
+@media (max-width: 500px) {
+  .form-row {
+    margin-right: 15px;
+    margin-left: 15px;
   }
 }
